# mojo-stark-prover-kernels

./: .gitignore  README.md  pyproject.toml
.github/workflows/: benchmark-ci.yml
docs/: ARCHITECTURE.md  FUZZING.md  TDD_PLAN.md
mojo/: blake2s_merkle_kernel.mojo
mojo_stark_prover_kernels/: __init__.py  backends.py  contracts.py  debug.py  differential.py  m31_axpy.py  native_backend.py  reference_blake2s_merkle.py  runner.py
native/mojo_kernel_abi/: Cargo.toml
native/mojo_kernel_abi/fuzz/: Cargo.toml
native/mojo_kernel_abi/fuzz/fuzz_targets/: abi_entrypoint.rs
native/mojo_kernel_abi/src/: lib.rs
scripts/: benchmark_backends.py  benchmark_m31_axpy.py  check_m31_perf_gate.py  ci_perf_gate.py  debug_merkle_commit.py  export_m31_benchmark_artifact.py  run_differential.py  run_native_fuzz.py
tests/: test_backends_security.py  test_benchmark_m31_axpy.py  test_ci_perf_gate.py  test_contracts.py  test_differential.py  test_m31_axpy_contracts.py  test_m31_axpy_reference.py  test_m31_benchmark_artifact.py  test_m31_native_backend.py  test_m31_perf_gate.py  test_mojo_shared_lib_integration.py  test_native_abi_compat.py  test_native_backend_flags.py  test_native_backend_pinning.py  test_native_rust_backend.py  test_reference_blake2s_merkle.py  test_runner.py
tests/vectors/: blake2s_merkle_case_01.json
