[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "mojo-stark-prover-kernels"
version = "0.1.0"
description = "Production-style kernel sidecar scaffolding for STARK prover acceleration."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "Starknet Ecosystem RnD" }]
dependencies = []

[tool.setuptools]
packages = ["mojo_stark_prover_kernels"]

